Add Algorithm Analysis Service project with logo and details to coding section

--- a/body/sections/coding.html
+++ b/body/sections/coding.html
@@ -8,10 +8,28 @@
         <div class="row">
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
+                    <a class="portfolio-link" target="_blank" href="https://github.com/andrelbd1/algorithm-analysis-service">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <h3>Open Project</h3>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/coding/algorithm-analysis-service/logo.png" alt="" />
+                    </a>
+                    <div class="portfolio-caption">
+                        <div class="portfolio-caption-heading">Algorithm Analysis Service</div>
+                        <div class="portfolio-caption-subheading text-muted"><b>Software Engineering</b></div>
+                        <div class="portfolio-caption-subheading text-muted">python, api, tornado, celery, redis, streamlit, plotly</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="portfolio-item">
                     <a class="portfolio-link" target="_blank" href="https://github.com/andrelbd1/BC_Service_Analysis">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <h3>Open Notebook</h3>
+                                <h3>Open Project</h3>
                             </div>
                         </div>
                         <img class="img-fluid" src="assets/img/coding/bc-service/logo.png" alt="" />
