Add 'design patterns' to the Algorithm Analysis Service project technologies

--- a/body/sections/coding.html
+++ b/body/sections/coding.html
@@ -19,7 +19,7 @@
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Algorithm Analysis Service</div>
                         <div class="portfolio-caption-subheading text-muted"><b>Software Engineering</b></div>
-                        <div class="portfolio-caption-subheading text-muted">python, api, tornado, celery, redis, streamlit, plotly</div>
+                        <div class="portfolio-caption-subheading text-muted">python, api, tornado, celery, redis, streamlit, plotly, design patterns</div>
                     </div>
                 </div>
             </div>
