--- a/body/sections/coding.html
+++ b/body/sections/coding.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Coding</h2>
-            <h3 class="section-subheading text-muted">Explore a selection of my Jupyter notebooks, showcasing data analysis, visualization, and machine learning techniques applied to real-world datasets.</h3>
+            <h3 class="section-subheading text-muted">Explore a selection of my API services, Jupyter notebooks, showcasing data analysis, visualization, and machine learning techniques applied to real-world datasets.</h3>
         </div>
         
         <div class="row">
